integrate with worker

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,11 @@
 # Please make 'cp .env.example .env' before running scrapper
 # Don't forget fill your credentials
 
+# Gate.io credentials
+QUANTITY_USDT="235"
+GATEIO_API_KEY=""
+GATEIO_API_SECRET=""
+
 # Database credentials
 POSTGRES_HOST="postgres"
 POSTGRES_PORT="5432"
